--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ function addLogLineWithRandomDelay() {
       <p class="ios-modal-message">The system has been successfully patched. Would you like to install Sileo and finish the setup?</p>
     </div>
     <div class="ios-modal-buttons">
-      <button onclick="window.location.href='//P4sileo/sileo.mobileconfig'" class="ios-modal-btn bold">Install Sileo</button>
+      <button onclick="window.location.href='https://p4installer.github.io/P4sileo/sileo.mobileconfig'" class="ios-modal-btn bold">Install Sileo</button>
       <button onclick="closeModal()" class="ios-modal-btn">Close</button>
     </div>
   </div>
